fix: spacing bug in the 'proof' section and updated images

--- a/src/scss/_proof.scss
+++ b/src/scss/_proof.scss
@@ -56,7 +56,7 @@
 
     @media (min-width: $bp-e) {
       float: left;
-      width: 39%;
+      width: 37.5%;
       margin: 3em 12.5% 5em 2.5%;
     }
 
